Refactoring project + demo REST service for Document UI Activity

--- a/pom.xml
+++ b/pom.xml
@@ -1,69 +1,126 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <parent>
-        <groupId>org.exoplatform</groupId>
-    	<artifactId>exo.parent</artifactId>
-    	<version>8.1</version>
-    </parent>
- 
-    <modelVersion>4.0.0</modelVersion>
-    
-    <groupId>cross.demo</groupId>
-    <artifactId>demo-commons-webui-component</artifactId>
-    <version>0.0.1</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<parent>
+		<groupId>org.exoplatform</groupId>
+		<artifactId>exo.parent</artifactId>
+		<version>8.1</version>
+	</parent>
 
-    <packaging>war</packaging>    
-    <name>COMMONS Demo Portlet</name>
-    <url></url>
-    <description>COMMONS Portlets</description>
-	 <build>
-	    <finalName>demo-commons-UI</finalName>
-	  </build>
-	  
- 	<properties>
- 		<org.gatein.portal.version>3.5.0.Beta01</org.gatein.portal.version>
- 		<org.exoplatform.commons.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.commons.version>
- 		<javax.portlet.version>2.0</javax.portlet.version>
- 	</properties>
- 	
-    <dependencies>
-	<!-- JSR Portlet -->
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>cross.demo.commons</groupId>
+	<artifactId>demo-commons</artifactId>
+	<version>0.0.1</version>	
+	
+	<packaging>pom</packaging>
+	<name>COMMONS Demo</name>
+
+	<properties>		
+		<org.gatein.portal.version>3.5.0.Beta01</org.gatein.portal.version>
+		<org.exoplatform.jcr.version>1.15.0-CR1</org.exoplatform.jcr.version>
+		<org.exoplatform.ws.version>2.3.0-CR1</org.exoplatform.ws.version>
+		<org.exoplatform.core.version>2.5.0-CR1</org.exoplatform.core.version>
+		
+		<org.exoplatform.commons.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.commons.version>
+		
+		<cross.demo.version>0.0.1</cross.demo.version>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<picocontainer.version>1.1</picocontainer.version>
+		<log4j.version>1.2.14</log4j.version>
+		<org.codehaus.mojo.version>1.0-beta-4</org.codehaus.mojo.version>
+		<javax.portlet.version>2.0</javax.portlet.version>
+
+		<jdk.min.version>1.6</jdk.min.version>
+		<junit.version>3.8.2</junit.version>
+	</properties>
+
+	<dependencyManagement>
+	<dependencies>
+		<!-- JSR Portlet -->
 		<dependency>
-		    <groupId>javax.portlet</groupId>
-		    <artifactId>portlet-api</artifactId>
-		    <version>${javax.portlet.version}</version>
-		    <scope>provided</scope>
-		</dependency>	   
+			<groupId>javax.portlet</groupId>
+			<artifactId>portlet-api</artifactId>
+			<version>${javax.portlet.version}</version>
+		</dependency>
 
-	<!-- WebUI Portlet -->
-        <dependency>
-            <groupId>org.gatein.portal</groupId>
-            <artifactId>exo.portal.webui.core</artifactId>
-            <version>${org.gatein.portal.version}</version>
-            <scope>provided</scope>
-        </dependency>
- 
-        <dependency>
-            <groupId>org.gatein.portal</groupId>
-            <artifactId>exo.portal.webui.eXo</artifactId>
-            <version>${org.gatein.portal.version}</version>
-            <scope>provided</scope>
-        </dependency>
- 
-        <dependency>
-            <groupId>org.gatein.portal</groupId>
-            <artifactId>exo.portal.webui.portal</artifactId>
-            <version>${org.gatein.portal.version}</version>
-            <scope>provided</scope>
-        </dependency>             
-        
-        <dependency>
-            <groupId>org.exoplatform.commons</groupId> 
-  	    <artifactId>commons-webui-component</artifactId>  
-            <version>${org.exoplatform.commons.version}</version>
-            <scope>provided</scope>
-        </dependency>    
-         
-                	   	     	  
-                	   	     	  
-    </dependencies>
+		<!-- WebUI Portlet -->
+		<dependency>
+			<groupId>org.gatein.portal</groupId>
+			<artifactId>exo.portal.webui.core</artifactId>
+			<version>${org.gatein.portal.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.gatein.portal</groupId>
+			<artifactId>exo.portal.webui.eXo</artifactId>
+			<version>${org.gatein.portal.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.gatein.portal</groupId>
+			<artifactId>exo.portal.webui.portal</artifactId>
+			<version>${org.gatein.portal.version}</version>
+		</dependency>
+
+		<!-- Webui Component -->
+		<dependency>
+			<groupId>org.exoplatform.commons</groupId>
+			<artifactId>commons-webui-component</artifactId>
+			<version>${org.exoplatform.commons.version}</version>
+		</dependency>	
+
+		<!-- Service component -->
+		<dependency>
+      			<groupId>org.exoplatform.ws</groupId>
+      			<artifactId>exo.ws.rest.core</artifactId>
+      			<version>${org.exoplatform.ws.version}</version>
+    		</dependency> 	
+
+		<dependency>
+		      <groupId>org.exoplatform.core</groupId>
+		      <artifactId>exo.core.component.security.core</artifactId>
+			<version>${org.exoplatform.core.version}</version>
+    		</dependency>
+    
+	    <dependency>
+	      <groupId>org.exoplatform.jcr</groupId>
+	      <artifactId>exo.jcr.component.core</artifactId>
+		<version>${org.exoplatform.jcr.version}</version>
+	    </dependency>
+
+	<!-- Container -->	    
+	    <dependency>
+	      <groupId>picocontainer</groupId>
+	      <artifactId>picocontainer</artifactId>
+	      <version>${picocontainer.version}</version>
+	    </dependency>
+	    
+	   <dependency>
+	      <groupId>log4j</groupId>
+	      <artifactId>log4j</artifactId>
+	      <version>${log4j.version}</version>
+	    </dependency>
+
+	    <dependency>
+	      <groupId>org.codehaus.mojo</groupId>
+	      <artifactId>buildnumber-maven-plugin</artifactId>
+		<version>${org.codehaus.mojo.version}</version>	      
+	    </dependency>
+
+	<!-- Unit Test -->
+	    <dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+		<version>${junit.version}</version>	   	      
+	    </dependency>
+
+	</dependencies>
+	</dependencyManagement>
+
+	<modules>
+		<module>portlet</module>
+		<module>service</module>
+	</modules>
+
 </project>
